@@ -19,6 +19,8 @@ Version 1.3.13+svn:
    * timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds (fr #10559)
    * fixed timer bell not always playing (bug #10559)
+   * it was possible two add the same track to the playlist twice which
+     could lead to an infinite loop (bug #10112)
  * user interface
    * the apple key works a shortcut modifier again (bug #10586)
  * WML engine:
